felixmorongeportfolio/terraform/k8s-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: felix-portfolio
  labels:
    app: felix-portfolio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: felix-portfolio
  template:
    metadata:
      labels:
        app: felix-portfolio
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: felix-portfolio
          image: 137068221475.dkr.ecr.us-east-1.amazonaws.com/felixmoronge-portfolio:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: portfolio-service
spec:
  type: ClusterIP
  selector:
    app: felix-portfolio
  ports:
    - port: 80
      targetPort: 80
